Align header links to the right

--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -2,14 +2,14 @@
   background-color: #111;
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  justify-content: flex-end;
+
 }
 
 ul {
   display: inherit;
   list-style: none;
   margin-right: 2rem;
-  text-align: right;
 }
 
 .nav-links {
