--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,20 @@
 .card {
   margin: 10px;
+  height: 15rem;
+  background-size: contain;
+}
+
+.card-header {
+  color: #333;
+  text-decoration: none;
+  font-weight: 200;
+}
+
+a {
+  text-decoration: none;
+}
+
+.restaurant-images {
+  height: 200px;
+  width: 15rem;
 }
