--- a/src/containers/LoginForm/LoginForm.css
+++ b/src/containers/LoginForm/LoginForm.css
@@ -10,7 +10,7 @@
   background-color: #fff;
   margin: auto;
   width: 40%;
-  height: 15rem;
+  height: 16rem;
   padding: 1rem;
 }
 
@@ -33,8 +33,8 @@
 }
 
 .form-header {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem auto;
+  font-size: 1rem;
 }
 
 .login-button {
