--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,7 @@
 .card {
   margin: 10px;
-  height: 15rem;
+  height: 17rem;
+  width: 18rem;
   background-size: contain;
 }
 
@@ -8,6 +9,7 @@
   color: #333;
   text-decoration: none;
   font-weight: 200;
+  font-size: 1rem;
 }
 
 a {
