--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,7 +2,12 @@
   margin: 10px;
   height: 17rem;
   width: 18rem;
-  background-size: contain;
+  border: 1px solid black;
+  /* background-color: #E4E4E4; */
+}
+
+.card:hover {
+  border: 1px solid red;
 }
 
 .card-header {
@@ -10,12 +15,13 @@
   text-decoration: none;
   font-weight: 200;
   font-size: 1rem;
+  /* margin-bottom: 0;
+  padding-bottom: 1rem;
+  border-bottom: 1.5px solid black; */
 }
-
 a {
   text-decoration: none;
 }
-
 .restaurant-images {
   height: 200px;
   width: 15rem;
