--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,10 +3,15 @@
   height: 17rem;
   width: 18rem;
   border: 1px solid black;
+  text-decoration: none;
+
 }
 
 .card:hover {
-  border: 1px solid red;
+  background-color: rgb(243, 243, 243, .9);
+}
+.details-link {
+  text-decoration: none;
 }
 
 .card-header {
@@ -14,7 +19,6 @@
   text-decoration: none;
   font-weight: 600;
   font-size: 1rem;
-
 }
 
 
