--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,11 +4,11 @@
   width: 18rem;
   border: 1px solid black;
   text-decoration: none;
-
+  padding: 5px;
 }
 
 .card:hover {
-  background-color: rgb(243, 243, 243, .9);
+  background-color: rgb(169, 169, 169, .9);
 }
 .details-link {
   text-decoration: none;
