--- a/src/containers/SearchForm/SearchForm.css
+++ b/src/containers/SearchForm/SearchForm.css
@@ -7,16 +7,12 @@
 }
 
 .search-form {
-  margin: 8rem auto;
+  margin: 10rem auto;
   border: 1px solid #333;
-  width: 50%;
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center; */
-  height: 7em;
+  width: 40%;
+  height: 6em;
   background-color: rgb(243, 243, 243, .8);
-  padding: 1em;
+  padding: 2em 4em 4em 4em; 
 }
 
 .location-field {
@@ -27,7 +23,7 @@
   font-weight: 500;
   padding: .5rem;
   border: none;
-  margin-top: 20px;
+  /* margin-top: 25px; */
 }
 
 .submit-location-button {
@@ -37,7 +33,7 @@
   border: none;
   padding: 0.5rem;
   font-size: 1em;
-  margin-top: 20px;
+  margin-top: 35px;
 }
 
 .search-label {
