--- a/src/containers/VisitedContainer/VisitedContainer.css
+++ b/src/containers/VisitedContainer/VisitedContainer.css
@@ -2,12 +2,26 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 30px;
 }
 
 .visited-card {
-  width: 20%;
+  width: 28%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin: 1rem;
+  border: 1px solid #333;
+  padding: 10px 20px;
+}
+
+.text-holder {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+}
+
+.visited-header {
+  margin: auto;
 }
