--- a/src/containers/VisitedForm/VisitedForm.css
+++ b/src/containers/VisitedForm/VisitedForm.css
@@ -5,6 +5,13 @@
   padding: 2em;
 }
 
+.rating-date-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 2.5em;
+}
+
 .submit-button {
   height: 2rem;
   width: 13em;
@@ -25,12 +32,12 @@
 }
 
 #rating {
-  width: 18%;
+  width: 33%;
   margin: 0.5rem 3.8em;
 }
 
 #date {
-  width: 20%;
+  width: 40%;
   margin: 0.5rem 3.8em;
 }
 
