--- a/src/containers/VisitedForm/VisitedForm.css
+++ b/src/containers/VisitedForm/VisitedForm.css
@@ -1,15 +1,22 @@
 .visited-form-container {
-  background-color: rgb(169, 169, 169, .9);
+  background-color: rgb(243, 243, 243, .9);
   width: 70%;
   margin: 2em auto;
   padding: 2em;
+  position: absolute;
+  bottom: 100px;
+  left: 15%;
+  margin: 0 auto;
 }
 
 .rating-date-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  height: 2.5em;
+  height: 3em;
+}
+.rating-container {
+  width: 33%;
 }
 
 .submit-button {
