--- a/src/containers/VisitedForm/VisitedForm.css
+++ b/src/containers/VisitedForm/VisitedForm.css
@@ -3,10 +3,10 @@
   width: 70%;
   margin: 2em auto;
   padding: 2em;
-  position: absolute;
-  bottom: 100px;
-  left: 15%;
+  position: relative;
+  bottom: 500px;
   margin: 0 auto;
+  border-radius: 1em;
 }
 
 .rating-date-container {
