--- a/src/containers/VisitedContainer/VisitedContainer.css
+++ b/src/containers/VisitedContainer/VisitedContainer.css
@@ -1,7 +1,7 @@
 .visited-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 30px;
 }
 
