Update css for restaurant details and searchform

--- a/src/containers/SearchForm/SearchForm.css
+++ b/src/containers/SearchForm/SearchForm.css
@@ -12,7 +12,8 @@
   width: 40%;
   height: 6em;
   background-color: rgb(243, 243, 243, .8);
-  padding: 2em 4em 4em 4em; 
+  padding: 2em 4em 4em 4em;
+  border-radius: 1em; 
 }
 
 .location-field {
