--- a/src/containers/RestaurantDetails/RestaurantDetails.css
+++ b/src/containers/RestaurantDetails/RestaurantDetails.css
@@ -15,6 +15,7 @@
   background-color: rgb(243, 243, 243, .8);
   width: 40%;
   height: 55vh;
+  min-height: fit-content;
   padding: 0.83em;
   text-align: left;
   margin: 3em;
@@ -25,6 +26,7 @@
   background-color: rgb(243, 243, 243, .8);
   width: 45%;
   height: 73vh;
+  min-height: fit-content;
   margin: 3em;
   border-radius: 0.75em;
 }
